# infra-notify

./: Cargo.toml  flake.nix
.github/workflows/: build_and_release.yml  check.yml
src/: args.rs  config.rs  embed.rs  generate_embed.rs  lib.rs  main.rs  parser.rs
