[package]
name = "infra-notify"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
human_bytes = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
ureq = { version = "2.9.7", features = ["json"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
