[package]
name = "infra-notify"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.11.5"
human_bytes = "0.4.3"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
ureq = { version = "2.10.0", features = ["json"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
